# SFML_scratchPad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  generate.sh
SFML_scratchPad/: Animator.cpp  Animator.h  AssetLoader.cpp  AssetLoader.h  Bonus.cpp  Bonus.h  Character.cpp  Character.h  Dot.cpp  Dot.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStates.h  GameStatesImplementation.cpp  GameStatesImplementation.h  GetReadyState.cpp  GetReadyState.h  Ghost.cpp  Ghost.h  GraphicsUtils.h  LostState.cpp  LostState.h  Maze.cpp  Maze.h  NoCoinState.cpp  NoCoinState.h  PacWoman.cpp  PacWoman.h  PlayingState.cpp  PlayingState.h  ResourcePath.mm  SFML_scratchPad.sln  SFML_scratchPad.vcxproj  SFML_scratchPad.vcxproj.filters  WonState.cpp  WonState.h  graphicsModule.cpp  main.cpp  (+3 more)
SFML_scratchPad/SFML_scratchPad.xcodeproj/: project.pbxproj
SFML_scratchPad/SFML_scratchPad.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SFML_scratchPad/SFML_scratchPad.xcodeproj/project.xcworkspace/xcuserdata/ignaciofernandez.xcuserdatad/: UserInterfaceState.xcuserstate
SFML_scratchPad/SFML_scratchPad.xcodeproj/xcuserdata/ignaciofernandez.xcuserdatad/xcschemes/: SFML_scratchPad.xcscheme  xcschememanagement.plist
SFML_scratchPad/resources/: Packitty.json
SFML_scratchPad/resources/audio/: audioCredits.txt
SFML_scratchPad/src/: config.h.in  main.cpp  sfml_main.cpp
cmake_modules/: FindSFML.cmake
sfml/lib/x64/Debug/: sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d.exp  sfml-network-d.lib  sfml-system-d.exp  sfml-system-d.lib  sfml-window-d.exp  sfml-window-d.lib
sfml/lib/x64/Release/: sfml-audio.exp  sfml-audio.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-main.lib  sfml-network.exp  sfml-network.lib  sfml-system.exp  sfml-system.lib  sfml-window.exp  sfml-window.lib
sfml_build/lib/: libsfml-audio.2.4.2.dylib  libsfml-graphics.2.4.2.dylib  libsfml-network.2.4.2.dylib  libsfml-system.2.4.2.dylib  libsfml-window.2.4.2.dylib
